<resources>
    <string name="app_name">El Perla Negra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="el_perla_negra_app">El Perla Negra App</string>
    <string name="registrotv">REGISTRO</string>
    <string name="registrobtn">REGISTRO</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="nombre">Nombre y Apellido</string>
    <string name="tel_fono">Teléfono</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="inicio_de_sesi_n">INICIO DE SESIÓN</string>
    <string name="inicio_sesion_log">INICIAR SESIÓN</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo_electr_nico_log">Correo electrónico</string>
    <string name="contrase_alog">Contraseña</string>
    <string name="registrarse1">REGISTRARSE</string>
    <string name="iniciar_sesi_n1">Iniciar Sesión</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="perfil">Perfil</string>
    <string name="carrito">Carrito de compras</string>
    <string name="inicio">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mispedidos">Mis Pedidos</string>
    <string name="mis_pedidos">Mis Pedidos</string>
    <string name="descripciondetalles">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus pulvinar metus nec sodales. Fusce sed lacus et ex imperdiet pharetra. Duis id elit gravida.</string>
    <string name="nota">Nota: Llene todos los campos del formulario al actualizar su información, incluso si solo desea modificar uno. Proporcione los mismos datos para evitar dejar espacios en blanco.</string>
    <string name="nota1">Nota: Llenar el campo que desea actualizar. Si deja algún campo vacío este no sufrirá cambios.</string>
    <string name="acerca">Somos un negocio de comida que le brinda al cliente un excelente servicio de atención, ofrecemos un menú muy exquisito y variado con altos principios para llevar un producto de primera calidad a su mesa y, sobre todo un inolvidable sabor a la comida de mamá.</string>
    <string name="direccionlocal">Cdla. El Cóndor Mz. A - Villa 9, atrás de Riocentro norte</string>

    <string name="map_description">Mapa de Guayaquil, Ecuador</string>
    <string name="administrador">Administrador</string>


</resources>