<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_action_perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/ic_action_carrito"
            android:title="@string/carrito" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_action_pedidos"
            android:title="@string/mis_pedidos" />
    </group>
</menu>