<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.elperlanegra.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.elperlanegra.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_carrito"
        android:name="com.example.elperlanegra.ui.carrito.CarritoFragment"
        android:label="@string/carrito"
        tools:layout="@layout/fragment_carrito" />

    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.example.elperlanegra.MisPedidosFragment"
        android:label="@string/mispedidos"
        tools:layout="@layout/fragment_mis_pedidos" />
</navigation>